--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
 
     //WriteActivity
     <string name="action_send">Send it!</string>
+    <string name="action_attachPhoto">Attach a photo</string>
+
+    //Notification
 </resources>
